Update Name from Controller
